api updates